{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 21,
  "lineage": "57867f6d-c3f4-09f4-21a6-5bfec67e36d7",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-1ffda8a56c5b12030",
            "arn": "arn:aws:ec2:eu-west-1:000000000000:elastic-ip/eipalloc-1ffda8a56c5b12030",
            "domain": "vpc",
            "id": "eipalloc-1ffda8a56c5b12030",
            "public_dns": "ec2-127-233-92-128.eu-west-1.compute.amazonaws.com",
            "public_ip": "127.233.92.128",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-nat_eip-a",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-nat_eip-a",
              "Project": "lab40"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b49d116b5a3249fd1",
            "arn": "arn:aws:ec2:eu-west-1:000000000000:elastic-ip/eipalloc-b49d116b5a3249fd1",
            "domain": "vpc",
            "id": "eipalloc-b49d116b5a3249fd1",
            "public_dns": "ec2-127-40-228-252.eu-west-1.compute.amazonaws.com",
            "public_ip": "127.40.228.252",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-nat_eip-b",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-nat_eip-b",
              "Project": "lab40"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:internet-gateway/igw-a327f3da68063a988",
            "id": "igw-a327f3da68063a988",
            "owner_id": "000000000000",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-igw",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-igw",
              "Project": "lab40"
            },
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-1ffda8a56c5b12030",
            "connectivity_type": "public",
            "id": "nat-9230af00693918475",
            "region": "eu-west-1",
            "subnet_id": "subnet-75801d6f20a467107",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-nat_gw-a",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-nat_gw-a",
              "Project": "lab40"
            },
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-b49d116b5a3249fd1",
            "connectivity_type": "public",
            "id": "nat-d05e43542312c9344",
            "region": "eu-west-1",
            "subnet_id": "subnet-3e022f0cf11f219e5",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-nat_gw-b",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-nat_gw-b",
              "Project": "lab40"
            },
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:route-table/rtb-30f264fe575449265",
            "id": "rtb-30f264fe575449265",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-9230af00693918475",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lab40-private_rt-a",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-private_rt-a",
              "Project": "lab40"
            },
            "timeouts": null,
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtb-30f264fe575449265",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:route-table/rtb-ead406bcda5dc67b0",
            "id": "rtb-ead406bcda5dc67b0",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-d05e43542312c9344",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lab40-private_rt-b",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-private_rt-b",
              "Project": "lab40"
            },
            "timeouts": null,
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtb-ead406bcda5dc67b0",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:route-table/rtb-28e48a65303e436de",
            "id": "rtb-28e48a65303e436de",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-a327f3da68063a988",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "lab40-public_rt",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-public_rt",
              "Project": "lab40"
            },
            "timeouts": null,
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "rtb-28e48a65303e436de",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-42cf2a0a0f4f85c77",
            "region": "eu-west-1",
            "route_table_id": "rtb-30f264fe575449265",
            "subnet_id": "subnet-b65114dda5409f3f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-dbb2a551b2655b570",
            "region": "eu-west-1",
            "route_table_id": "rtb-ead406bcda5dc67b0",
            "subnet_id": "subnet-dedf3630376df89a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_subnet_assoc",
            "module.network.aws_subnet.private_subnet",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-328561b2d55df4079",
            "region": "eu-west-1",
            "route_table_id": "rtb-28e48a65303e436de",
            "subnet_id": "subnet-75801d6f20a467107"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07de539dcf702b5a3",
            "region": "eu-west-1",
            "route_table_id": "rtb-28e48a65303e436de",
            "subnet_id": "subnet-3e022f0cf11f219e5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public_subnet",
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:security-group/sg-e1b4cc249530c8184",
            "description": "SSH from my IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-e1b4cc249530c8184",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from allowed IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab40-bastion_sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lab40-bastion_sg",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-bastion_sg",
              "Project": "lab40"
            },
            "timeouts": null,
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-e1b4cc249530c8184",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:security-group/sg-3d76827672ca2df94",
            "description": "Allow DB from Web SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-3d76827672ca2df94",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Web SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-33fecce142d3b0ffb"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "lab40-db_sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lab40-db_sg",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-db_sg",
              "Project": "lab40"
            },
            "timeouts": null,
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-3d76827672ca2df94",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.bastion",
            "module.network.aws_security_group.web",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:security-group/sg-33fecce142d3b0ffb",
            "description": "Allow HTTP/S from anywhere, SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-33fecce142d3b0ffb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP 80 from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS 443 from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-e1b4cc249530c8184"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab40-web_sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "lab40-web_sg",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-web_sg",
              "Project": "lab40"
            },
            "timeouts": null,
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "sg-33fecce142d3b0ffb",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_security_group.bastion",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:subnet/subnet-b65114dda5409f3f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-b65114dda5409f3f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-private_subnet-a",
              "Project": "lab40",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-private_subnet-a",
              "Project": "lab40",
              "Tier": "private"
            },
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-b65114dda5409f3f1",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:subnet/subnet-dedf3630376df89a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-dedf3630376df89a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-private_subnet-b",
              "Project": "lab40",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-private_subnet-b",
              "Project": "lab40",
              "Tier": "private"
            },
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-dedf3630376df89a3",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:subnet/subnet-75801d6f20a467107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-75801d6f20a467107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-public_subnet-a",
              "Project": "lab40",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-public_subnet-a",
              "Project": "lab40",
              "Tier": "public"
            },
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-75801d6f20a467107",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:subnet/subnet-3e022f0cf11f219e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-3e022f0cf11f219e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-public_subnet-b",
              "Project": "lab40",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-public_subnet-b",
              "Project": "lab40",
              "Tier": "public"
            },
            "vpc_id": "vpc-90eefc2935b9c1d56"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "subnet-3e022f0cf11f219e5",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:vpc/vpc-90eefc2935b9c1d56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-71be32a7f31e945db",
            "default_route_table_id": "rtb-80b6ac4114f0d8482",
            "default_security_group_id": "sg-66877f1b521637fc2",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-90eefc2935b9c1d56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-80b6ac4114f0d8482",
            "owner_id": "000000000000",
            "region": "eu-west-1",
            "tags": {
              "Environment": "dev",
              "Name": "lab40-vpc",
              "Project": "lab40"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "lab40-vpc",
              "Project": "lab40"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000000000000",
            "id": "vpc-90eefc2935b9c1d56",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}